--- a/01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics.tex
+++ b/01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics.tex
@@ -309,11 +309,29 @@ values & ind\\
 
 De aquí podemos decir que:
 
-\[F(4,20)=14.76\]
+\[F(4,20)=14.76, p < 0.001\]
 
-Este \emph{F-Test} da una valor mayor que uno, lo que significa, en
-resumen, que al menos un tratamiento tiene un efecto medible sobre las
-observaciones.
+Tenemos los grados de libertad \(4\) (numerador) y \(20\) (denominador),
+asi como un \(p\) menor a \(0.001\). Con estos datos podemos buscar en
+la tabla de Fischer para \(p<0.001\): \renewcommand{\figurename}{Fig.}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.3\linewidth]{ftable001} 
+
+}
+
+\caption{Tabla de Fisher p < 0.001}\label{fig:unnamed-chunk-7}
+\end{figure}
+
+Tabla tomada de
+\url{https://web.ma.utexas.edu/users/davis/375/popecol/tables/f0001.html}
+
+Para estos valores del \emph{F-Test}, al buscarlos en la tabla nos da
+que el valor crítico es \(7.10\). Nuestro \emph{F-Test} da un resultado
+de \(14.76\), que es mayor que el valor crítico, lo que significa que al
+menos un tratamiento tiene un efecto medible sobre las observaciones y
+es un resutlado estadísticamente válido.
 
 La explicación de lo anterior es:
 
@@ -336,7 +354,10 @@ compone de tres partes:
 
 \[ y_{ij} = \mu + \tau_i + \epsilon_{ij} \]
 
-\(\mu\) = la media \(\tau\) = Efecto del í-ésimo tratamiento
+\(\mu\) = la media
+
+\(\tau\) = Efecto del í-ésimo tratamiento
+
 \(\epsilon\) = error de la observación
 
 Tal y como vimos en clase, de esto podemos deducir dos hipotesis:
@@ -346,29 +367,34 @@ Tal y como vimos en clase, de esto podemos deducir dos hipotesis:
 \item
   Hipotesis nula \(H_0\): los efectos de los tratamientos no no afectan,
   es decir, la media de todos los tratamientos es la misma, y todo puede
-  ser explicado por \(\mu + \epsilon_{ij}\)
+  ser explicado por \(y_{ij} = \mu + \epsilon_{ij}\)
 \item
   Hipotesis alternativa \(H_1\): Los efectos de los tratamientos si
   afectan, por lo tanto en al menos un par de tratamientos \((i,j)\),
   \(\mu_i \neq \mu_j\)
 \end{itemize}
 
-Para probar estas hipotesis, ANOVA lo que hace es calcular la dispersión
-de las medias, y dividirlas por la dispersion de todas las
-observaciones. Si \(\tau_i=0 \forall i\), entonces la dispersion de
-todas las medias y la dispersion de todas las observaciones seria la
-misma, y el \emph{F test} daría 1. De lo contrario daría un número mayor
-que uno, al afectar \(\tau\) al menos a uno de los tratamientos moviendo
-un poco la dispersión.
+Para probar estas hipotesis, ANOVA, como una forma intuitiva de
+entenderlo, lo que hace es calcular la dispersión de las medias, y
+dividirlas por la dispersion de todas las observaciones. Si
+\(\tau_i=0 \forall i\), entonces la dispersion de todas las medias y la
+dispersion de todas las observaciones seria similar, y el \emph{F test}
+daría un valor inferior al valor crítico de la tabla de Fischer. De lo
+contrario daría un número mayor que este valor crítico.
 
-Estas varianzas las calcula ANOVA de la siguiente forma:
-
-Adicionalmente, ANOVA utiliza los \emph{grados de libertad}. Estos son
-basicamente cuanta informacion utiliza el modelo. En el caso de
-variables categoricas, como en este caso, para las medias se calcula
-como uno menos que el numero de niveles: \(DF_k=k-1\). En el caso del
+Adicionalmente, ANOVA utiliza los \emph{grados de libertad}. En el caso
+de variables categoricas, como en este caso, para las medias se calcula
+como uno menos que el numero de niveles \(DF_k=k-1\). En el caso del
 error, se calcula como el numero de observaciones menos el numero de
-niveles (o grupos) usados: \(DF_n=n-k\).
+niveles (o grupos) usados \(DF_n=n-k\).
+
+El cálculo que realiza ANOVA es el siguiente:
+
+\$\$
+
+F=CMF
+
+\$\$
 
 \begin{itemize}
 \tightlist
@@ -377,94 +403,6 @@ niveles (o grupos) usados: \(DF_n=n-k\).
 \end{itemize}
 
 Esto se ve reflejado dentro de los datos en el objeto ANOVA:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{print}\NormalTok{(}\KeywordTok{summary}\NormalTok{(anova_algodon)[[}\DecValTok{1}\NormalTok{]][[}\StringTok{"Sum Sq"}\NormalTok{]][[}\DecValTok{1}\NormalTok{]])}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-## [1] 475.76
-\end{verbatim}
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{str}\NormalTok{(anova_algodon)}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-## List of 13
-##  $ coefficients : Named num [1:5] 9.8 5.6 7.8 11.8 1
-##   ..- attr(*, "names")= chr [1:5] "(Intercept)" "indPorc_20" "indPorc_25" "indPorc_30" ...
-##  $ residuals    : Named num [1:25] -2.8 -2.8 5.2 1.2 -0.8 ...
-##   ..- attr(*, "names")= chr [1:25] "1" "2" "3" "4" ...
-##  $ effects      : Named num [1:25] -75.2 0.9 6.84 20.63 1.58 ...
-##   ..- attr(*, "names")= chr [1:25] "(Intercept)" "indPorc_20" "indPorc_25" "indPorc_30" ...
-##  $ rank         : int 5
-##  $ fitted.values: Named num [1:25] 9.8 9.8 9.8 9.8 9.8 15.4 15.4 15.4 15.4 15.4 ...
-##   ..- attr(*, "names")= chr [1:25] "1" "2" "3" "4" ...
-##  $ assign       : int [1:5] 0 1 1 1 1
-##  $ qr           :List of 5
-##   ..$ qr   : num [1:25, 1:5] -5 0.2 0.2 0.2 0.2 0.2 0.2 0.2 0.2 0.2 ...
-##   .. ..- attr(*, "dimnames")=List of 2
-##   .. .. ..$ : chr [1:25] "1" "2" "3" "4" ...
-##   .. .. ..$ : chr [1:5] "(Intercept)" "indPorc_20" "indPorc_25" "indPorc_30" ...
-##   .. ..- attr(*, "assign")= int [1:5] 0 1 1 1 1
-##   .. ..- attr(*, "contrasts")=List of 1
-##   .. .. ..$ ind: chr "contr.treatment"
-##   ..$ qraux: num [1:5] 1.2 1.08 1.1 1.13 1.2
-##   ..$ pivot: int [1:5] 1 2 3 4 5
-##   ..$ tol  : num 1e-07
-##   ..$ rank : int 5
-##   ..- attr(*, "class")= chr "qr"
-##  $ df.residual  : int 20
-##  $ contrasts    :List of 1
-##   ..$ ind: chr "contr.treatment"
-##  $ xlevels      :List of 1
-##   ..$ ind: chr [1:5] "Porc_15" "Porc_20" "Porc_25" "Porc_30" ...
-##  $ call         : language aov(formula = values ~ ind, data = algodon_stacked, qr = TRUE)
-##  $ terms        :Classes 'terms', 'formula'  language values ~ ind
-##   .. ..- attr(*, "variables")= language list(values, ind)
-##   .. ..- attr(*, "factors")= int [1:2, 1] 0 1
-##   .. .. ..- attr(*, "dimnames")=List of 2
-##   .. .. .. ..$ : chr [1:2] "values" "ind"
-##   .. .. .. ..$ : chr "ind"
-##   .. ..- attr(*, "term.labels")= chr "ind"
-##   .. ..- attr(*, "order")= int 1
-##   .. ..- attr(*, "intercept")= int 1
-##   .. ..- attr(*, "response")= int 1
-##   .. ..- attr(*, ".Environment")=<environment: R_GlobalEnv> 
-##   .. ..- attr(*, "predvars")= language list(values, ind)
-##   .. ..- attr(*, "dataClasses")= Named chr [1:2] "numeric" "factor"
-##   .. .. ..- attr(*, "names")= chr [1:2] "values" "ind"
-##  $ model        :'data.frame':   25 obs. of  2 variables:
-##   ..$ values: int [1:25] 7 7 15 11 9 12 17 12 18 18 ...
-##   ..$ ind   : Factor w/ 5 levels "Porc_15","Porc_20",..: 1 1 1 1 1 2 2 2 2 2 ...
-##   ..- attr(*, "terms")=Classes 'terms', 'formula'  language values ~ ind
-##   .. .. ..- attr(*, "variables")= language list(values, ind)
-##   .. .. ..- attr(*, "factors")= int [1:2, 1] 0 1
-##   .. .. .. ..- attr(*, "dimnames")=List of 2
-##   .. .. .. .. ..$ : chr [1:2] "values" "ind"
-##   .. .. .. .. ..$ : chr "ind"
-##   .. .. ..- attr(*, "term.labels")= chr "ind"
-##   .. .. ..- attr(*, "order")= int 1
-##   .. .. ..- attr(*, "intercept")= int 1
-##   .. .. ..- attr(*, "response")= int 1
-##   .. .. ..- attr(*, ".Environment")=<environment: R_GlobalEnv> 
-##   .. .. ..- attr(*, "predvars")= language list(values, ind)
-##   .. .. ..- attr(*, "dataClasses")= Named chr [1:2] "numeric" "factor"
-##   .. .. .. ..- attr(*, "names")= chr [1:2] "values" "ind"
-##  - attr(*, "class")= chr [1:2] "aov" "lm"
-\end{verbatim}
-
-y
-
-\[p = 9.13e-06 < 0.05\]
-
-Al ser \(p < 0.05\), podemos decir que los resultados son
-significativos, y no fueron obtenidos aleatoriamente.
 
 
 \end{document}
