--- a/01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics.tex
+++ b/01_Matematica_Ciencias_Datos/Leccion02/Tarea2_Los_Celtics.tex
@@ -106,7 +106,7 @@
 \usepackage{titling}
 
 % Create subtitle command for use in maketitle
-\newcommand{\subtitle}[1]{
+\providecommand{\subtitle}[1]{
   \posttitle{
     \begin{center}\large#1\end{center}
     }
@@ -176,8 +176,8 @@ Porc\_35 & 7 & 10 & 11 & 15 & 11\\
 
 \subsection{Limpieza de datos}\label{limpieza-de-datos}
 
-Los datos cargados no cumplen con los estÃ¡ndares de \emph{Tidy Data}
-\url{https://vita.had.co.nz/papers/tidy-data.pdf} para el analisis, por
+Los datos cargados no cumplen con los estándares de \emph{Tidy Data}
+\url{https://vita.had.co.nz/papers/tidy-data.pdf} para el análisis, por
 lo que es necesario al menos hacer un cambio - cambiar las observaciones
 (experimentos) a filas, y mantener las variables independientes a
 columnas. Afortunadamente, esto lo podemos hacer facilmente haciendo la
@@ -275,6 +275,22 @@ values & ind\\
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\KeywordTok{ggboxplot}\NormalTok{(algodon_stacked, }\DataTypeTok{x=}\StringTok{"ind"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"values"}\NormalTok{, }\DataTypeTok{color =} \StringTok{"ind"}\NormalTok{, }\DataTypeTok{order =} \KeywordTok{c}\NormalTok{(}\StringTok{"Porc_15"}\NormalTok{, }\StringTok{"Porc_20"}\NormalTok{, }\StringTok{"Porc_25"}\NormalTok{, }\StringTok{"Porc_30"}\NormalTok{, }\StringTok{"Porc_35"}\NormalTok{), }\DataTypeTok{ylab =} \StringTok{"libra/pulg^2"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"% de Algodón")}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{Tarea2_Los_Celtics_files/figure-latex/unnamed-chunk-5-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{ggline}\NormalTok{(algodon_stacked, }\DataTypeTok{x=} \StringTok{"ind"}\NormalTok{, }\DataTypeTok{y =} \StringTok{"values"}\NormalTok{, }\DataTypeTok{add =} \KeywordTok{c}\NormalTok{(}\StringTok{"mean_se"}\NormalTok{, }\StringTok{"jitter"}\NormalTok{), }\DataTypeTok{order =} \KeywordTok{c}\NormalTok{(}\StringTok{"Porc_15"}\NormalTok{, }\StringTok{"Porc_20"}\NormalTok{, }\StringTok{"Porc_25"}\NormalTok{, }\StringTok{"Porc_30"}\NormalTok{, }\StringTok{"Porc_35"}\NormalTok{), }\DataTypeTok{ylab =} \StringTok{"libra/pulg^2"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"% de Algodón")}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{Tarea2_Los_Celtics_files/figure-latex/unnamed-chunk-6-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \NormalTok{anova_algodon <-}\StringTok{ }\KeywordTok{aov}\NormalTok{(values }\OperatorTok{~}\StringTok{ }\NormalTok{ind, }\DataTypeTok{data =}\NormalTok{ algodon_stacked, }\DataTypeTok{qr =} \OtherTok{TRUE}\NormalTok{)}
 \KeywordTok{summary}\NormalTok{(anova_algodon)}
 \end{Highlighting}
@@ -321,7 +337,7 @@ la tabla de Fischer para \(p<0.001\): \renewcommand{\figurename}{Fig.}
 
 }
 
-\caption{Tabla de Fisher p < 0.001}\label{fig:unnamed-chunk-7}
+\caption{Tabla de Fisher p < 0.001}\label{fig:unnamed-chunk-9}
 \end{figure}
 
 Tabla tomada de
@@ -336,51 +352,48 @@ es un resutlado estadísticamente válido.
 La explicación de lo anterior es:
 
 ANOVA lo que hace es calcular varianzas. Estas varianzas nos indican
-cuan alejados estan los datos de la media, es decir, la dispersion de
-los datos. Entre mas grande sea la varianza, significa que los datos
-estan mas lejos.
+cuán alejados están los datos de la media, es decir, la dispersión de
+los datos. Entre más grande sea la varianza, significa que los datos
+están más lejos.
 
 El \emph{F-test} lo que indica es la razón entre las varianzas de las
 medias de la muestra y de las varianzas de los errores de las
 observaciones de la muestra. La idea es que la varianza de las medias
-deberia de ser similar a la varianza de las observaciones en caso que
+debería de ser similar a la varianza de las observaciones en caso que
 las diferencias de las observaciones sean por errores, dado que tienen
-el mismo origen. De no ser asi, la varianza de la menos un grupo de
-medias seria mucho mayor que la varianza entre las muestras, porque
-habria otro factor que esta afectando solamente a ese grupo.
+el mismo origen. De no ser así, la varianza de al menos un grupo de
+medias sería mucho mayor que la varianza entre las muestras, porque
+habría otro factor que está afectando solamente a ese grupo.
 
 Tomando el ejemplo visto en clase, si partimos que cada observación se
 compone de tres partes:
 
 \[ y_{ij} = \mu + \tau_i + \epsilon_{ij} \]
 
-\(\mu\) = la media
-
-\(\tau\) = Efecto del í-ésimo tratamiento
-
+\(\mu\) = la media \(\tau\) = Efecto del i-ésimo tratamiento
 \(\epsilon\) = error de la observación
 
-Tal y como vimos en clase, de esto podemos deducir dos hipotesis:
+Tal y como vimos en clase, de esto podemos deducir dos hipótesis:
 
 \begin{itemize}
 \tightlist
 \item
-  Hipotesis nula \(H_0\): los efectos de los tratamientos no no afectan,
-  es decir, la media de todos los tratamientos es la misma, y todo puede
-  ser explicado por \(y_{ij} = \mu + \epsilon_{ij}\)
+  Hipótesis nula \(H_0\): los efectos de los tratamientos no afectan, es
+  decir, la media de todos los tratamientos es la misma, y todo puede
+  ser explicado por \(\mu + \epsilon_{ij}\)
 \item
-  Hipotesis alternativa \(H_1\): Los efectos de los tratamientos si
+  Hipótesis alternativa \(H_1\): Los efectos de los tratamientos si
   afectan, por lo tanto en al menos un par de tratamientos \((i,j)\),
   \(\mu_i \neq \mu_j\)
 \end{itemize}
 
-Para probar estas hipotesis, ANOVA, como una forma intuitiva de
-entenderlo, lo que hace es calcular la dispersión de las medias, y
-dividirlas por la dispersion de todas las observaciones. Si
-\(\tau_i=0 \forall i\), entonces la dispersion de todas las medias y la
-dispersion de todas las observaciones seria similar, y el \emph{F test}
-daría un valor inferior al valor crítico de la tabla de Fischer. De lo
-contrario daría un número mayor que este valor crítico.
+Para probar estas hipótesis, ANOVA lo que hace es calcular la dispersión
+de las medias, y dividirlas por la dispersion de todas las
+observaciones. Si \(\tau_i=0 \forall i\), entonces la dispersión de
+todas las medias y la dispersión de todas las observaciones sería la
+misma, y el \emph{F test} daría 1. De lo contrario daría un número mayor
+que uno, al afectar \(\tau\) al menos a uno de los tratamientos moviendo
+un poco la dispersión.
 
 Adicionalmente, ANOVA utiliza los \emph{grados de libertad}. En el caso
 de variables categoricas, como en este caso, para las medias se calcula
